apps/interfaces/radar/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radar
  namespace: radar
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - match: Host(`k8s.umhomelab.com`) || Host(`www.k8s.umhomelab.com`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: auth
      services:
        - name: radar
          namespace: radar
          port: 9280
  tls: {}
